--- a/src/pages/CameraCapture/CameraCapture.module.css
+++ b/src/pages/CameraCapture/CameraCapture.module.css
@@ -1,5 +1,3 @@
-/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
-
 .content {
     height: 100dvh;
     display: flex;
@@ -116,10 +114,15 @@
     font-weight: 600;
     color: var(--main-color);
     padding: 5px 11px;
-    /* background-color: #FFFFFF; */
     background: #ffffffcd;
     border: none;
     border-radius: 100px;
+    transition: background-color 0.35s ease, color 0.35s ease;
+}
+
+.btnSuccess {
+    color: #00B274 !important;
+    background: #ffffffcd !important;
 }
 
 .bottomBlock {
@@ -127,6 +130,8 @@
     display: flex;
     flex-direction: column;
     /* gap: 20px; */
+    padding-right: 24px;
+    padding-left: 24px;
 }
 
 .text {
@@ -149,4 +154,11 @@
     height: 5px;
     background-color: #000000;
     border-radius: 100px;
+}
+
+.frameImage {
+    width: 188px;
+    height: 460px;
+    pointer-events: none;
+    user-select: none;
 }
