--- a/src/pages/HomePageQr/HomePageQr.module.css
+++ b/src/pages/HomePageQr/HomePageQr.module.css
@@ -48,7 +48,9 @@
 
 .heading {
     font-size: 22px;
-    font-weight: 711;
+    font-family: 'Cooper Hewitt', sans-serif;
+    font-weight: 700;
+    line-height: 1.3;
     color: var(--main-color);
 }
 
