--- a/src/pages/Steps/Steps.module.css
+++ b/src/pages/Steps/Steps.module.css
@@ -30,11 +30,14 @@
     gap: 12px;
     margin-bottom: 26px;
     margin-top: 60px;
+    max-width: 312px;
 }
 
 .heading {
     font-size: 24px;
-    font-weight: 711;
+    font-family: 'Cooper Hewitt', sans-serif;
+    font-weight: 700;
+    line-height: 1.3;
     color: var(--main-color);
 }
 
