--- a/src/pages/AddDetailsPage/AddDetailsPage.module.css
+++ b/src/pages/AddDetailsPage/AddDetailsPage.module.css
@@ -1,11 +1,19 @@
 .content {
-    background-color: var(--main-background-color);
+    /* background-color: var(--main-background-color);
     display: flex;
     flex-direction: column;
     display: block;
-    /* padding-bottom: 114px; */
+    padding-bottom: 114px;
+    min-height: 100dvh;
+    overflow-y: auto; */
+
+    /* -------------------------------------- */
+    background-color: var(--main-background-color);
+    display: flex;
+    flex-direction: column;
     min-height: 100dvh;
     overflow-y: auto;
+    padding-top: 66px;
 }
 
 .wrapLogo {
@@ -14,6 +22,13 @@
     justify-content: center;
     border-bottom: 1px solid var(--main-background-color-border);
     background-color: #FFFFFF;
+
+    /* ------------------------------------------------- */
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
 }
 
 .logo {
