--- a/src/pages/ResultWithoutDetailsPage/ResultWithoutDetailsPage.module.css
+++ b/src/pages/ResultWithoutDetailsPage/ResultWithoutDetailsPage.module.css
@@ -1,9 +1,8 @@
-.content {
+/* .content {
     background-color: var(--main-background-color);
     display: flex;
     flex-direction: column;
     display: block;
-    /* padding-bottom: 114px; */
     padding-bottom: 114px;
     min-height: 100dvh;
     overflow-y: auto;
@@ -15,6 +14,41 @@
     justify-content: center;
     border-bottom: 1px solid var(--main-background-color-border);
     background-color: #FFFFFF;
+} */
+
+.content {
+    /* background-color: var(--main-background-color);
+    display: flex;
+    flex-direction: column;
+    display: block;
+    padding-bottom: 114px;
+    min-height: 100dvh;
+    overflow-y: auto; */
+
+    /* -------------------------------------- */
+    background-color: var(--main-background-color);
+    display: flex;
+    flex-direction: column;
+    min-height: 100dvh;
+    overflow-y: auto;
+    padding-top: 66px;
+    padding-bottom: 114px;
+    /* padding-bottom: 89px; */
+}
+
+.wrapLogo {
+    padding: 21px;
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px solid var(--main-background-color-border);
+    background-color: #FFFFFF;
+
+    /* ------------------------------------------------- */
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
 }
 
 .logo {
@@ -187,13 +221,6 @@
     width: 100%;
     z-index: 1000;
 }
-
-/* .bottomLine {
-    width: 345px;
-    height: 1px;
-    background-color: var(--main-background-color-border);
-    margin: 0 auto;
-} */
 
 .btn {
     margin-top: 10px;
