--- a/src/pages/HomePageQr/HomePageQr.module.css
+++ b/src/pages/HomePageQr/HomePageQr.module.css
@@ -38,6 +38,7 @@
     flex-direction: column;
     gap: 10px;
     text-align: center;
+    margin-bottom: 20px;
 }
 
 .welcome {
@@ -60,6 +61,7 @@
 
 .bottomBlock {
     margin-top: auto;
+    margin-bottom: 29px;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -86,15 +88,4 @@
     max-width: 276px;
 }
 
-.wrapLine {
-    display: flex;
-    justify-content: center;
-    padding-bottom: 8px;
-}
 
-.line {
-    width: 134px;
-    height: 5px;
-    background-color: #000000;
-    border-radius: 100px;
-}
