--- a/src/pages/HowItWorksPage/HowItWorksPage.module.css
+++ b/src/pages/HowItWorksPage/HowItWorksPage.module.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     padding-bottom: 79px;
+    padding-bottom: 132px;
 }
 
 .wrapLogo {
@@ -12,6 +13,12 @@
     justify-content: center;
     border-bottom: 1px solid var(--main-background-color-border);
     background-color: #FFFFFF;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
 }
 
 .logo {
@@ -23,6 +30,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 66px;
 }
 
 .title {
@@ -38,7 +46,7 @@
 .steps {
     display: flex;
     flex-direction: column;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 .step {
@@ -77,7 +85,7 @@
 
 .bottomBlock {
     background-color: var(--main-background-color);
-    padding: 10px 0 24px;
+    padding: 16px 0 36px;
 
     position: fixed;
     bottom: 0;
@@ -89,4 +97,10 @@
     max-width: 393px;
     padding: 0 24px;
     margin: 0 auto;
+}
+
+.btn {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
