--- a/src/pages/ResultWithDetailsPageNormal/ResultWithDetailsPageNormal.module.css
+++ b/src/pages/ResultWithDetailsPageNormal/ResultWithDetailsPageNormal.module.css
@@ -5,7 +5,7 @@
     min-height: 100dvh;
     overflow-y: auto;
     padding-top: 66px;
-    padding-bottom: 180px;
+    padding-bottom: 157px;
 }
 
 .wrapLogo {
@@ -113,7 +113,7 @@
     font-size: 12px;
 }
 
-.textBlock {
+.infoBlock {
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -127,6 +127,7 @@
     border-top: 1px solid var(--main-background-color-border);
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
+    line-height: 1.3;
 }
 
 .recommendations {
@@ -138,53 +139,34 @@
     border-radius: 10px;
 }
 
-.wrapHeading {
-    display: flex;
-    justify-content: space-between;
-}
-
-.heading {
-    color: #1F1F1F;
-    font-weight: 700;
-}
-
-.arrow {
-    display: flex;
-    transition: transform 0.25s ease;
-    transform-origin: center;
+.edit {
     cursor: pointer;
 }
 
-.arrowOpen {
-    transform: rotate(180deg);
+.innerText {
+    font-size: 14px;
+    color: #1F1F1F;
+    line-height: 1.3;
+}
+
+.wrapText {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
 }
 
 .text {
-    font-size: 14px;
-    color: #1F1F1F;
-}
-
-.hidden {
-    display: none;
-}
-
-.advice {
-    padding: 20px 16px;
-    background-color: #FFFFFF;
     display: flex;
-    flex-direction: column;
-    gap: 10px;
-    border-radius: 10px;
+    gap: 15px;
 }
 
-.btnTop {
-    margin-top: 8px;
-}
-
-.info {
-    font-size: 12px;
-    color: #717680;
-    text-align: center;
+.point {
+    position: relative;
+    min-width: 7px;
+    height: 7px;
+    background-color: #006D5B;
+    border-radius: 50%;
+    top: 5px;
 }
 
 .fixedBlock {
@@ -216,4 +198,116 @@
     max-width: 393px;
     padding: 0 24px;
     margin: 0 auto;
+}
+
+.wrapHeading {
+    display: flex;
+    justify-content: space-between;
+}
+
+.heading {
+    color: #1F1F1F;
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.details {
+    padding: 20px 16px;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+}
+
+
+.wrapDetailslList {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    padding-top: 6px;
+    max-width: 306px;
+}
+
+.item {
+    padding: 8px 10px 9px;
+    border: 1px solid var(--main-color);
+    border-radius: 100px;
+    font-size: 14px;
+    background-color: #DCE8E4;
+    color: var(--main-color);
+}
+
+.editBtn {
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+.titleSecondary {
+    font-family: 'Cooper Hewitt', sans-serif;
+    font-size: 22px;
+    font-weight: 700;
+    color: var(--main-color);
+    text-align: center;
+}
+
+.wrapLearnMore {
+    display: flex;
+}
+
+.img {
+    width: 127px;
+    height: 164px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    overflow: hidden;
+    flex-shrink: 0;
+}
+
+.img img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.learnMore {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    padding: 12px 8px 0 18px;
+    background: #FFFFFF;
+}
+
+.learnMoreTitle {
+    font-size: 14px;
+    font-weight: 700;
+    color: var(--main-color);
+    line-height: 1.3;
+}
+
+.learnMoreText {
+    font-size: 12px;
+    line-height: 1.3;
+}
+
+.learnMoreLink {
+    font-size: 14px;
+    font-weight: 600;
+    color: #1F1F1F;
+    margin-top: 8px;
+}
+
+@media (max-width: 393px) {
+    .img {
+        width: 80%;        /* или 40%, или max-width: 100%, как тебе подходит */
+        height: auto;
+        flex-shrink: 1;   
+    }
+
+    .img img {
+        width: 100%;
+        height: auto;
+    }
 }
