--- a/src/pages/ResultWithoutDetailsPage/ResultWithoutDetailsPage.module.css
+++ b/src/pages/ResultWithoutDetailsPage/ResultWithoutDetailsPage.module.css
@@ -134,13 +134,14 @@
     background-color: #FFFFFF;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    /* gap: 10px; */
     border-radius: 10px;
 }
 
 .wrapHeading {
     display: flex;
     justify-content: space-between;
+    cursor: pointer;
 }
 
 .heading {
@@ -162,10 +163,21 @@
 .text {
     font-size: 14px;
     color: #1F1F1F;
+    margin-top: 10px;
 }
 
-.hidden {
-    display: none;
+.collapse {
+    max-height: 0;
+    opacity: 0;
+    overflow: hidden;
+    transition: max-height 0.35s ease, opacity 0.35s ease;
+    margin: 0;
+    padding: 0;
+}
+
+.open {
+    opacity: 1;
+    max-height: 500px;
 }
 
 .advice {
