--- a/src/pages/RegistrationFlow/RegistrationStep1/RegistrationStep1.module.css
+++ b/src/pages/RegistrationFlow/RegistrationStep1/RegistrationStep1.module.css
@@ -13,23 +13,50 @@
 
 .content {
     background-color: var(--main-background-color);
-    min-height: 100dvh;
+    height: 100dvh;
     display: flex;
     flex-direction: column;
 }
 
+.containerInner {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.crumbs {
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+.itemColored,
+.item {
+    flex: 1;
+    max-width: 65px;
+    height: 9px;
+    border-radius: 100px;
+}
+
+.itemColored {
+    background-color: #87ACA3;
+}
+
+.item {
+    background-color: #E9EAEB;
+}
+
 .img {
     width: 100%;
-    padding-top: 12px;
-    /* padding-bottom: 29px; */
-    padding-bottom: 20px;
-    border-radius: 24px;
+    border-radius: 10px;
 }
 
 .img img {
     width: 100%;
     height: auto;
-    max-height: 285px;
+    max-height: 218px;
     object-fit: contain;
 }
 
@@ -37,56 +64,32 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    text-align: center;
-    margin-bottom: 20px;
+    margin-top: 28px;
 }
 
-.welcome {
-    font-size: 12px;
-    color: var(--main-color);
+.step {
+    font-weight: 600;
     text-transform: uppercase;
 }
 
 .heading {
-    font-size: 22px;
+    font-size: 24px;
     font-family: 'Cooper Hewitt', sans-serif;
     font-weight: 700;
     line-height: 1.3;
     color: var(--main-color);
+    margin-bottom: 2px;
 }
 
 .text {
     line-height: 1.3;
-    color: #1F1F1F;
 }
 
 .bottomBlock {
     margin-top: auto;
-    margin-bottom: 29px;
+    margin-bottom: 36px;
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
-
-.btns {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-top: auto;
-}
-
-.bottomText {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-
-.bottomText p {
-    font-size: 13px;
-    line-height: 18px;
-    color: #717680;
-    text-align: center;
-    max-width: 276px;
-}
-
 
