--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -24,30 +24,6 @@
     height: 100%;
 }
 
-.crumbs {
-    display: flex;
-    justify-content: center;
-    gap: 5px;
-    padding-top: 25px;
-    padding-bottom: 25px;
-}
-
-.itemColored,
-.item {
-    flex: 1;
-    max-width: 170px;
-    height: 9px;
-    border-radius: 100px;
-}
-
-.itemColored {
-    background-color: #6F988F;
-}
-
-.item {
-    background-color: #E9EAEB;
-}
-
 .img {
     width: 100%;
     border-radius: 10px;
@@ -76,11 +52,6 @@
     font-size: 24px;
     font-family: 'Cooper Hewitt', sans-serif;
     font-weight: 700;
-    line-height: 1.3;
-    color: var(--main-color);
-}
-
-.text {
     line-height: 1.3;
     color: var(--main-color);
 }
@@ -139,7 +110,7 @@
 
 .bottomBlock {
     margin-top: auto;
-    margin-bottom: 36px;
+    margin-bottom: 27px;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -154,4 +125,21 @@
 .btnDisabled {
     background-color: #D5D7DA;
     cursor: not-allowed;
+}
+
+.wrapinfo {
+    display: flex;
+    justify-content: center;
+}
+
+.info {
+    font-size: 12px;
+}
+
+.signin {
+    font-size: 14px;
+    font-weight: 600;
+    color: #1F1F1F;
+    text-decoration: underline;
+    margin-left: 10px;
 }
