--- a/src/shared/styles/common.css
+++ b/src/shared/styles/common.css
@@ -16,5 +16,5 @@ body {
     width: 100%;
     overflow-x: hidden;
     overflow-y: auto;
-    overscroll-behavior-y: none;
+    /* overscroll-behavior-y: none; */
 }
