--- a/src/pages/StartPage/StartPage.module.css
+++ b/src/pages/StartPage/StartPage.module.css
@@ -1,6 +1,16 @@
 .pageRoot {
-    padding: 0;
-    margin: 0;
+    /* padding: 0;
+    margin: 0; */
+
+    height: 100vh;
+    overflow: hidden;
+}
+
+
+.scrollArea {
+    height: 100%;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
 }
 
 .scrollFix {
@@ -45,6 +55,11 @@
     min-height: 100dvh;
     display: flex;
     flex-direction: column;
+
+    overflow-y: auto;
+    height: 100%;
+    -webkit-overflow-scrolling: touch;
+    /* smooth scroll */
 }
 
 .img {
@@ -101,7 +116,3 @@
     margin-top: auto;
     width: 100%;
 }
-
-
-
-
