--- a/src/pages/StartPage/StartPage.module.css
+++ b/src/pages/StartPage/StartPage.module.css
@@ -7,11 +7,11 @@
 }
 
 
-.scrollArea {
+/* .scrollArea {
     height: 100%;
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
-}
+} */
 
 .scrollFix {
     height: 1px;
