--- a/src/shared/styles/common.css
+++ b/src/shared/styles/common.css
@@ -20,5 +20,5 @@ body {
 
     overflow: hidden;
     /* ← главное */
-    overscroll-behavior-y: contain;
+    /* overscroll-behavior-y: contain; */
 }
