--- a/src/pages/StartPage/StartPage.module.css
+++ b/src/pages/StartPage/StartPage.module.css
@@ -1,6 +1,6 @@
 .wrapLogo {
     position: relative;
-    /* padding: 21px; */
+    padding: 21px;
     display: flex;
     justify-content: center;
     align-items: center;
