--- a/src/components/HormoneDropdown/HormoneDropdown.module.css
+++ b/src/components/HormoneDropdown/HormoneDropdown.module.css
@@ -30,11 +30,6 @@
     color: #000000;
 }
 
-/* .select:hover {
-    background-color: #00303D;
-    color: #FFFFFF;
-} */
-
 .arrow {
     display: flex;
     transition: transform 0.25s ease;
@@ -65,8 +60,8 @@
 }
 
 .dropdownOpen {
-    max-height: 300px;
-    max-height: 40vh;
+    max-height: 280px;
+    max-height: 35vh;
     overflow-y: auto;
     opacity: 1;
     padding: 5px;
@@ -77,23 +72,15 @@
     align-items: center;
     gap: 8px;
     padding: 10px 10px 10px 14px;
-    border-radius: 10px;
     cursor: pointer;
+    font-size: 16px;
+    font-weight: 600;
+    color: #0C121E;
+    border-bottom: 1px solid #E9EAEB;
 }
 
 .dropdownItem:hover {
     background-color: #00303D;
     color: #FFFFFF;
-    border-radius: 10px;
 }
 
-/* .checkmarkLeft {
-    width: 16px;
-    text-align: center;
-    opacity: 0;
-    transition: opacity 0.2s;
-}
-
-.visible {
-    opacity: 1;
-} */
