--- a/src/components/PersonalData/Discharge/Discharge.module.css
+++ b/src/components/PersonalData/Discharge/Discharge.module.css
@@ -6,19 +6,12 @@
     border-radius: 10px;
 }
 
-.title {
-    color: #1F1F1F;
-    font-size: 16px;
-    font-weight: 700;
-    margin-bottom: 10px;
-}
-
-.wrapEthnicBackgroundlList {
+.wrapDischargeList {
     display: flex;
     flex-wrap: wrap;
     gap: 8px;
-    padding-top: 6px;
-
+    padding-top: 16px;
+    line-height: 1.3;
 }
 
 .item {
@@ -31,7 +24,7 @@
     color: var(--main-color);
 }
 
-.isemSelected {
+.itemSelected {
     display: flex;
     align-items: center;
     gap: 8px;
