--- a/src/components/PersonalData/HormoneDropdown/HormoneDropdown.module.css
+++ b/src/components/PersonalData/HormoneDropdown/HormoneDropdown.module.css
@@ -4,12 +4,6 @@
     width: 100%;
 }
 
-.title {
-    color: #1F1F1F;
-    font-size: 16px;
-    font-weight: 700;
-}
-
 .select {
     width: 100%;
     position: relative;
@@ -76,6 +70,7 @@
     font-size: 16px;
     font-weight: 600;
     color: #0C121E;
+    line-height: 1.3;
     border-bottom: 1px solid #E9EAEB;
 }
 
@@ -83,4 +78,3 @@
     background-color: #00303D;
     color: #FFFFFF;
 }
-
